[gd_scene load_steps=4 format=3 uid="uid://ciusdsdqdktrg"]

[ext_resource type="Texture2D" uid="uid://ds2lku8a7ajbm" path="res://Sprites/Elementos/estalactita.png" id="1_0gve6"]
[ext_resource type="Script" uid="uid://cm1bdacda2qj2" path="res://Scripts/Elementos/estalactita.gd" id="1_am5jd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_am5jd"]
size = Vector2(640, 7520)

[node name="Estalactita" type="Node2D"]
z_index = -1
script = ExtResource("1_am5jd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_0gve6")
region_rect = Rect2(191, 130, 641, 767)

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Hitbox"]
position = Vector2(1, -8)
scale = Vector2(0.555583, 0.645839)
polygon = PackedVector2Array(-1, 20, -14, -18, 11, -18)

[node name="DetectarJugador" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectarJugador"]
position = Vector2(7.6294e-07, 168)
scale = Vector2(0.05, 0.05)
shape = SubResource("RectangleShape2D_am5jd")

[node name="DetectarSueloRomperse" type="RayCast2D" parent="."]
target_position = Vector2(0, 13)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="DetectarJugador" to="." method="_on_detect_player_body_entered"]
